--- a/src/templates/pages/item.html
+++ b/src/templates/pages/item.html
@@ -39,5 +39,15 @@
       </div>
     </div>
   </div>
+ 
+  <h2>おすすめ</h2>
+  <div class="row mb-5">
+    {% for object in ADDTIONAL_ITEMS %}
+    <div class="col-12 col-lg-3 my-3">
+      {% include 'snippets/item_add_box.html' %}
+    </div>
+    {% endfor %}
+  </div>
+ 
 </div>
 {% endblock %}
